test/should_fail/bc.erl
-module(bc).

-spec f() -> binary().
f() ->
    << X || <<X/integer>> <= <<"abc">> >>.
